[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/root_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://components/watermark/Watermark.gd" type="Script" id=2]
[ext_resource path="res://components/root_theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Watermark" type="Button"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -156.0
margin_top = -30.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut_in_tooltip = false
script = ExtResource( 2 )
link = "https://bestwaifu242.tumblr.com/"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0.172549 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "@bestwaifu242"
text = "@bestwaifu242"
fit_content_height = true
scroll_active = false

[connection signal="button_up" from="." to="." method="_on_Watermark_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Watermark_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Watermark_mouse_exited"]
